# linuxops-env

./: .gitignore  Dockerfile  LICENSE  README.md  baseline_agent.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
environment/: __init__.py  grader.py  linux_env.py  models.py  reward.py  tasks.py
tests/: test_env.py
